--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
 
           <div class="navigation-part">
             <a href="#callback-form" class="hire-me-btn">— Связаться</a>
-            <div class="tablet-element">
-              <a href="" class="mobile-menu" id="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
-              </a>
-            </div>
             <div class="mobile-element">
               <a href="" class="mobile-menu" id="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
@@ -482,19 +477,20 @@
           <p class="callback-form-descr">
             Leave a request to discuss the task and technical requirements
           </p>
-
-          <button
-            class="callback-form-submit accent-btn"
-            onClick='location.href="https://t.me/Aleks_A_C"'
-          >
-            <i class="fab fa-telegram-plane"></i> telegram
-          </button>
-          <button
-            class="callback-form-submit accent-btn"
-            onClick='location.href="https://viber.click/380956219616"'
-          >
-            <i class="fab fa-viber"></i> viber
-          </button>
+          <div class="buttons">
+            <button
+              class="callback-form-submit accent-btn"
+              onClick='location.href="https://t.me/Aleks_A_C"'
+            >
+              <i class="fab fa-telegram-plane"></i> telegram
+            </button>
+            <button
+              class="callback-form-submit accent-btn viber"
+              onClick='location.href="https://viber.click/380956219616"'
+            >
+              <i class="fab fa-viber"></i> viber
+            </button>
+          </div>
         </form>
       </div>
     </section>
@@ -522,7 +518,7 @@
             <i class="fab fa-github social-links-item"></i>
           </a>
           <a
-            href="www.linkedin.com/in/aleks-a-c"
+            href="https://www.linkedin.com/in/aleks-a-c/"
             class="social-links-item-link"
           >
             <i class="fab fa-linkedin social-links-item"></i>
@@ -724,10 +720,16 @@
             </ul>
             <p class="work-title">Работа с ПК:</p>
             <ul class="project-modal-text">
-              <li>работа в 1С по многим вышеперечисленным пунктам;</li>
+              <li>работа в 1С(ErPos) по многим вышеперечисленным пунктам;</li>
               <li>корпоративная связь посредством почтового клиента;</li>
               <li>редактирование отчетов в Excel.</li>
             </ul>
+            <h4 class="company">
+              Рекомендации:
+              <span class="company-descr"
+                >Брова Виктория, младший администратор (099-293-06-04)</span
+              >
+            </h4>
           </div>
         </div>
       </div>
