--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
         </div>
 
         <div class="social-links">
-          <a href="https://github.com/Aleks-A-C" class="social-links-item-link">
-            <i class="fab fa-github social-links-item"></i>
+          <a href="https://discord.gg/mWvX2B3" class="social-links-item-link">
+            <i class="fab fa-discord social-links-item"></i>
           </a>
           <a
             href="https://www.linkedin.com/in/aleks-a-c/"
