--- a/index.html
+++ b/index.html
@@ -573,6 +573,7 @@
             class="my-video-content modal-area-content"
             src="video.mp4"
             controls
+            muted
           ></video>
         </div>
       </div>
