--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
       <div class="container">
         <nav class="navigation">
           <a href="" class="logo-link">
-            <img src="img/goit-logo.svg" alt="GOIT logo" />
+            <img
+              src="img/briefcase-1965.svg"
+              alt="logo"
+              height="30px"
+              width="100"
+            />
           </a>
 
           <div class="desktop-element">
