--- a/index.html
+++ b/index.html
@@ -897,6 +897,9 @@
             <ul class="project-modal-text">
               <li>Консультирование и продажа электроники и услуг;</li>
               <li>Расчет покупателей на кассе;</li>
+              <li>
+                Установка ОС, ПО и настройка компьютеров, телефонов, планшетов
+              </li>
               <li>Обучение стажеров;</li>
               <li>Прием и переоценка товара.</li>
             </ul>
