--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
               <li>Консультирование и продажа электроники и услуг;</li>
               <li>Расчет покупателей на кассе;</li>
               <li>
-                Установка ОС, ПО и настройка компьютеров, телефонов, планшетов
+                Установка ОС, ПО и настройка компьютеров, телефонов, планшетов;
               </li>
               <li>Обучение стажеров;</li>
               <li>Прием и переоценка товара.</li>
