--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
                   <i
                     class="experience-dots-item experience-dots-item-accent far fa-circle"
                   ></i>
-                  <i class="experience-dots-item far fa-circle"></i>
+                  <i
+                    class="experience-dots-item experience-dots-item-accent far fa-circle"
+                  ></i>
                 </div>
 
                 <p class="experience-text">Кассовая дисциплина</p>
