--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             </div>
             <p class="personal-project-name">
               <i class="fas fa-clipboard-list personal-project-icon"></i>
-              <span>Помощник администратора</span>
+              <span>Заместитель управляющего</span>
             </p>
             <button
               class="personal-project-btn accent-btn"
@@ -675,7 +675,7 @@
             </div>
 
             <h3 class="project-modal-title">
-              Продавец-консультант - Кассир - Младший админстратор
+              Продавец-консультант - Кассир - Заместитель управляющего
             </h3>
             <h4 class="company">
               Colin's <span class="company-descr">(сеть магазинов одежды)</span>
@@ -753,7 +753,7 @@
             <h4 class="company">
               Рекомендации:
               <span class="company-descr"
-                >Брова Виктория, младший администратор (099-293-06-04)</span
+                >Брова Виктория, заместитель управляющего (099-293-06-04)</span
               >
             </h4>
           </div>
