--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
               Подробнее —
             </button>
           </div>
+          <!-- jor 
            <div class="personal-project-item">
               <div class="personal-project-item-container">
                  <div class="projet-item-dot-container">
@@ -435,7 +436,7 @@
                         Подробнее —
                       </button>
                     </div>
-
+                      -->
         </div>
       </div>
     </section>
