--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </p>
 
               <button class="front-page-my-video-btn" 
-              onClick='location.href="https://docs.google.com/document/d/1LzLIuBqOl-rYRAHB_1L5ILi4PST8qTPXByvtbqP_Qus/edit?usp=sharing"'>
+              onClick='window.open("https://docs.google.com/document/d/1LzLIuBqOl-rYRAHB_1L5ILi4PST8qTPXByvtbqP_Qus/edit?usp=sharing") '>
                 <i class="fas fa-hand-point-right"></i>
                 CLICK
               </button>
